<resources>
    <string name="app_name">My Health</string>
    <string name="medicamento">Medicamento</string>
    <string name="buscar">Buscar</string>
    <string name="salvar">Salvar</string>
    <string name="inicio_tratamento">Início do Tratamento</string>
    <string name="duracao">Duração (em dias)</string>
    <string name="intervalo">Intervalo (em horas)</string>
    <string name="alertas">Alertas</string>
    <string name="principio_ativo">Princípio Ativo:</string>
    <string name="medicamento_referencia">Medicamento de Referência:</string>
    <string name="classe_terapeutica">Classe Terapêutica:</string>
    <string name="avancar">Avançar</string>
    <string name="login">Login</string>
    <string name="ordenar">Ordenar</string>
    <string name="ordenar_por_medicamento">Ordenar por Medicamento</string>
    <string name="ordenar_por_data">Ordenar por Data</string>
    <string name="ocultar_completos">Ocultar Completos</string>
    <string name="apagar_completos">Apagar Completos</string>
    <string name="detalhes">Detalhes</string>
    <string name="selecione_data_horario">Selecione a data e o horário</string>
    <string name="selecione_data_horario_inicio_tratamento">Selecione a data e o horário de início do tratamento</string>
    <string name="cancelar">Cancelar</string>
    <string name="inicio_tratamento_hora">Horário de Início do Tratamento</string>
    <string name="erro_campo_vazio">O campo %1$s não pode ficar vazio!</string>
    <string name="erro_campo_negativo">O campo %1$s não pode ser menor que zero!</string>
    <string name="razao_social_cnpj">%1$s - %2$s</string>
    <string name="erro_conexao">Erro de conexão. Verifique sua internet.</string>
    <string name="resultados_offline">Exibindo resultados offline.</string>
    <string name="lembretes">Lembretes</string>
    <string name="medicamentos">Medicamentos</string>
    <string name="lembrete">Lembrete</string>
    <string name="proxima_dose">Próxima dose: %1$s</string>
    <string name="tratamento_completo">Tratamento completo</string>
    <string name="lembrete_removido">Lembrete removido</string>
    <string name="lembretes_removido">Lembretes removidos</string>
    <string name="desfazer">Desfazer</string>
    <string name="novo_lembrete_criado">Lembrete criado com sucesso!</string>
    <string name="lembrete_editado">Lembrete editado com sucesso!</string>
    <string name="confirmar_exclusao">Confirmar exclusão</string>
    <string name="mensagem_confirmar_exclusao">Você realmente deseja apagar todos os lembretes completos?</string>
    <string name="sim">Sim</string>
    <string name="botao_novo_lembrete">Botão novo lembrete</string>
    <string name="botao_buscar">Botão buscar</string>
    <string name="botao_data_inicio_tratamento">Botão data de início do tratamento</string>
    <string name="botao_hora_inicio_tratamento">Botão hora de início do tratamento</string>
    <string name="botao_avancar">Botão avançar</string>
    <string name="botao_salvar">Botão salvar</string>
    <string name="sem_lembretes">Sem Lembretes</string>
    <string name="medicamento_nao_encontrado">Medicamento não encontrado</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="imagem_logo">Imagem com o logo</string>
    <string name="novo_usuario">Novo Usuário</string>
    <string name="nome">Nome</string>
    <string name="confirmar_senha">Confirmar senha</string>
    <string name="erro_email_invalido">O email digitado não é válido!</string>
    <string name="erro_email_existente">O email digitado já existe na base de dados!</string>
    <string name="erro_senha_curta">A senha precisa ter 6 dígitos!</string>
    <string name="erro_nova_senha_curta">A nova senha precisa ter 6 dígitos!</string>
    <string name="senhas_diferentes">As senhas digitadas são diferentes!</string>
    <string name="novo_usuario_criado">Usuário criado com sucesso!</string>
    <string name="usuario_nao_encontrado">Usuário não encontrado</string>
    <string name="senha_errada">Senha errada</string>
    <string name="sair">Sair</string>
    <string name="logout_sucesso">Logout efeutado com sucesso!</string>
    <string name="bem_vindo">Bem vindo, %1$s!</string>
    <string name="nascimento">Data de Nascimento</string>
    <string name="genero">Gênero</string>
    <string name="tipo_sanguineo">Tipo Sanguíneo</string>
    <string name="peso">Peso (em kg)</string>
    <string name="botao_data_nascimento">Botão data de nascimento</string>
    <string name="altura">Altura (em metros)</string>
    <string name="perfil_usuario">Perfil de Usuário</string>
    <string name="home">Início</string>
    <string name="data_futura">A data de nascimento não pode estar no futuro!</string>
    <string name="peso_elevado">O peso não pode ser tão alto!</string>
    <string name="peso_negativo">O peso não pode ser menor que zero!</string>
    <string name="peso_zerado">O peso não pode ser igual a zero!</string>
    <string name="altura_elevada">A altura não pode ser tão alta!</string>
    <string name="altura_negativa">A altura não pode ser menor que zero!</string>
    <string name="altura_zerada">A altura não pode ser igual a zero!</string>
    <string name="perfil_salvo_sucesso">Perfil salvo com sucesso!</string>
    <string name="bula_medicamentos">Bula de Medicamentos</string>
    <string name="baixando_bula">Baixando a bula</string>
    <string name="alterar_senha">Alterar Senha</string>
    <string name="configuracoes">Configurações</string>
    <string name="nova_senha">Nova Senha</string>
    <string name="senha_atual">Senha Atual</string>
    <string name="senha_alterada_sucesso">Senha alterada com sucesso!</string>
    <string name="senha_atual_errada">Senha atual errada!</string>
    <string name="botao_adicionar_agua">Botão adicionar consumo de água</string>
    <string name="beba_agua">Beba Água!</string>
    <string name="meta_diaria">Meta Diária</string>
    <string name="meta_diaria_args">Meta Diária: %1$dmℓ</string>
    <string name="l">L</string>
    <string name="ml">mℓ</string>
    <string name="inicio">Início</string>
    <string name="botao_hora_inicio_lembrete">Botão hora de início de lembrete</string>
    <string name="final_">Final</string>
    <string name="botao_hora_fim_lembrete">Botão hora final de lembretes</string>
    <string name="horario_lembretes">Horário dos Lembretes</string>
    <string name="consumo_restante">Consumo Restante: %1$dmℓ</string>
    <string-array name="generos">
        <item>Feminino</item>
        <item>Masculino</item>
        <item>Outro</item>
    </string-array>
    <string-array name="tipos_sanquineos">
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>O+</item>
        <item>O-</item>
    </string-array>
</resources>