<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    tools:context=".home.agua.view.ConfiguracaoAguaFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutMetaDiaria"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:hint="@string/meta_diaria"
                app:layout_constraintEnd_toStartOf="@+id/guidelineVertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextMetaDiaria"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup
                android:id="@+id/radioGroupUnidade"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toEndOf="@+id/guidelineVertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RadioButton
                    android:id="@+id/radioButtonLitros"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/l" />

                <RadioButton
                    android:id="@+id/radioButtonMililitros"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ml" />
            </RadioGroup>

            <TextView
                android:id="@+id/textViewHorarioLembrete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/horario_lembretes"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textInputLayoutMetaDiaria" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutHoraInicioLembrete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/inicio"
                app:layout_constraintEnd_toStartOf="@+id/imageButtonDataHoraInicioLembrete"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewHorarioLembrete">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextHoraInicioLembrete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/imageButtonDataHoraInicioLembrete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="4dp"
                android:contentDescription="@string/botao_hora_inicio_lembrete"
                app:layout_constraintEnd_toStartOf="@+id/guidelineVertical"
                app:layout_constraintTop_toBottomOf="@+id/textViewHorarioLembrete"
                app:srcCompat="@drawable/ic_baseline_access_time_24" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutHoraFimLembrete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/final_"
                app:layout_constraintEnd_toStartOf="@+id/imageButtonHoraFimLembrete"
                app:layout_constraintStart_toStartOf="@id/guidelineVertical"
                app:layout_constraintTop_toBottomOf="@+id/textViewHorarioLembrete">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextHoraFimLembrete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/imageButtonHoraFimLembrete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:contentDescription="@string/botao_hora_fim_lembrete"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewHorarioLembrete"
                app:srcCompat="@drawable/ic_baseline_access_time_24" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutAlertas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/alertas"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutHoraInicioLembrete">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextAlertas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <Switch
                android:id="@+id/switchAlertas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:checked="true"
                android:minWidth="60dp"
                android:minHeight="60dp"
                android:padding="4dp"
                android:switchMinWidth="60dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutHoraInicioLembrete"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineVertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButtonSalvar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:contentDescription="@string/botao_salvar"
        android:src="@drawable/ic_baseline_check_24" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>